# xpp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  clang-format  conanfile.py
cmake/: FindXCB.cmake  xpp-config.cmake.in
examples/: CMakeLists.txt  Makefile  demo_01.cpp  demo_02.cpp
generators/: TODO  accessor.py  cpp_client.py  cppcookie.py  cpperror.py  cppevent.py  cppreply.py  cpprequest.py  extensionclass.py  interfaceclass.py  objectclass.py  parameter.py  utils.py
include/: event.hpp
include/generic/: reply_iterator.hpp
include/xpp/: atom.hpp  colormap.hpp  connection.hpp  core.hpp  cursor.hpp  drawable.hpp  event.hpp  flags.makefile  font.hpp  fontable.hpp  gcontext.hpp  pixmap.hpp  window.hpp
include/xpp/generic/: error.hpp  event.hpp  extension.hpp  factory.hpp  input_iterator_adapter.hpp  iterator_traits.hpp  reply_iterator.hpp  request.hpp  resource.hpp  signature.hpp
src/: atom.cppm  colormap.cppm  connection.cppm  core.cpp  core.cppm  cursor.cppm  drawable.cppm  event.cppm  font.cppm  fontable.cppm  gcontext.cppm  generic.cppm  pixmap.cppm  window.cppm  xpp.cppm
src/generic/: error.cppm  event.cppm  extension.cppm  factory.cppm  input_iterator_adapter.cppm  iterator_traits.cppm  reply_iterator.cppm  request.cppm  resource.cppm  signature.cppm
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  Makefile  event.cpp  iterator.cpp  requests.cpp  unittest.cpp
